; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/x86/extr_core.c_is_hypercall.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/x86/extr_core.c_is_hypercall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lg_cpu = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@GUEST_PL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lg_cpu*)* @is_hypercall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_hypercall(%struct.lg_cpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lg_cpu*, align 8
  %4 = alloca [3 x i32], align 4
  store %struct.lg_cpu* %0, %struct.lg_cpu** %3, align 8
  %5 = load %struct.lg_cpu*, %struct.lg_cpu** %3, align 8
  %6 = getelementptr inbounds %struct.lg_cpu, %struct.lg_cpu* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, 3
  %11 = load i32, i32* @GUEST_PL, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %39

14:                                               ; preds = %1
  %15 = load %struct.lg_cpu*, %struct.lg_cpu** %3, align 8
  %16 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %17 = load %struct.lg_cpu*, %struct.lg_cpu** %3, align 8
  %18 = load %struct.lg_cpu*, %struct.lg_cpu** %3, align 8
  %19 = getelementptr inbounds %struct.lg_cpu, %struct.lg_cpu* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @guest_pa(%struct.lg_cpu* %17, i32 %22)
  %24 = call i32 @__lgread(%struct.lg_cpu* %15, i32* %16, i32 %23, i32 12)
  %25 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp eq i32 %26, 15
  br i1 %27, label %28, label %36

28:                                               ; preds = %14
  %29 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 1
  %30 = load i32, i32* %29, align 4
  %31 = icmp eq i32 %30, 1
  br i1 %31, label %32, label %36

32:                                               ; preds = %28
  %33 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 2
  %34 = load i32, i32* %33, align 4
  %35 = icmp eq i32 %34, 193
  br label %36

36:                                               ; preds = %32, %28, %14
  %37 = phi i1 [ false, %28 ], [ false, %14 ], [ %35, %32 ]
  %38 = zext i1 %37 to i32
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %36, %13
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @__lgread(%struct.lg_cpu*, i32*, i32, i32) #1

declare dso_local i32 @guest_pa(%struct.lg_cpu*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
